# gragraf

./: .gitignore  AGENT.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  brach_workflow.json  dev_plan.md  human_in_loop_workflow.json  package-lock.json  package.json  pyproject.toml  requrements.md  test_end_node.html  test_payload.json  test_simple_keys.py
.cursor/rules/: dev-instruction.mdc
frontend/: config.js  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  ConfigPanel.tsx  REFACTOR_SUMMARY.md  Sidebar.tsx  index.css  index.tsx  nodes.tsx  reportWebVitals.ts  setupProxy.js  types.ts
frontend/src/components/: AgentConfigForm.tsx  ApprovalModal.tsx  BranchConfigForm.tsx  ConfigPanel.tsx  DockToolbar.tsx  EndConfigForm.tsx  EndNode.tsx  FloatingPanel.tsx  HttpRequestConfigForm.tsx  HumanInLoopConfigForm.tsx  ImportWorkflowDialog.tsx  KnowledgeBaseConfigForm.tsx  RightPanel.tsx  RunForm.tsx  SaveWorkflowDialog.tsx  Sidebar.tsx  StartConfigForm.tsx  StartNode.tsx  UnifiedButton.tsx  VariablePicker.tsx  WorkflowListDialog.tsx  WorkflowMenu.tsx  WorkflowResult.tsx
frontend/src/services/: workflowApi.ts
src/gragraf/: compiler.py  parser.py  server.py
src/gragraf/api/: __init__.py  workflows.py
src/gragraf/application/: __init__.py  (+1 more)
tests/: test_agent_node.py  test_api_integration.py  test_branch_node.py  test_dsl_parser.py  test_end_to_end.py  test_graph_compiler.py  test_http_request_node.py  test_human_in_loop_integration.py  test_human_in_loop_node.py  test_knowledge_base_node.py
(+25 files in other folders)
