[project]
name = "gragraf"
version = "0.1.0"
description = "A graph-based workflow orchestrator"
authors = [{ name = "gragraf", email = "gragraf@example.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph",
    "langchain",
    "fastapi",
    "uvicorn",
    "pydantic",
    "httpx",
    "respx",
    "pytest",
    "pytest-asyncio",
    "langchain-community",
    "faiss-cpu",
    "sentence-transformers",
    "langchain-openai",
    "trio",
    "jinja2",
    "beautifulsoup4",
    "requests",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "alembic>=1.12.0",
    "greenlet>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
